--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts":{
-    "prepare-commit":"cz -e"
+    "prepare-commit":"cz -e",
+    "commit": "./node_modules/cz-customizable/standalone.js"
   },
   "config": {
     "commitizen": {
